--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <title>Quadratic Solver & Grading System</title>
     <style>
@@ -13,8 +14,8 @@
         hr { margin: 20px 0; }
     </style>
 </head>
-<body>
-    <h2>Quadratic Solver</h2>
+<body style="background-color: aqua;">
+    <h2 style="color:red;">Quadratic Solver</h2>
     <form id="quadraticForm">
         <div>
             <label for="a">a:</label>
@@ -38,7 +39,7 @@
 
     <hr>
 
-    <h2>Grading System</h2>
+    <h2 style="color: red;">Grading System</h2>
     <form id="gradingForm">
         <div>
             <label for="score">Score:</label>
